# MirrorAI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_VN.md  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  v1.7z  v2.7z  v3.7z
apps/cli/: index.ts  package.json  tsconfig.json
apps/cli/commands/: doctor.ts  export.ts  ingest.ts  init.ts  mirror.ts  setup.ts  status.ts
config/: .env.template  mirrorai.config.yaml
docs/: PLUGIN_DEVELOPMENT.md  i
scripts/: install.sh
workspace/: AGENTS.md
